Modifiche test per Status