@@ -29,11 +29,6 @@ class StatusUtilsTest {
                 .timestamp(Instant.parse("2021-09-16T15:24:00.00Z"))
                 .category(TimelineElementCategory.REQUEST_ACCEPTED)
                 .build();
-        TimelineElementInternal timelineElement2 = TimelineElementInternal.timelineInternalBuilder()
-                .elementId("el2")
-                .timestamp((Instant.parse("2021-09-16T15:25:00.00Z")))
-                .category(TimelineElementCategory.GET_ADDRESS)
-                .build();
         TimelineElementInternal timelineElement3 = TimelineElementInternal.timelineInternalBuilder()
                 .elementId("el3")
                 .timestamp((Instant.parse("2021-09-16T15:26:00.00Z")))
@@ -60,14 +55,16 @@ class StatusUtilsTest {
                 .category(TimelineElementCategory.PAYMENT)
                 .build();
 
-        Set<TimelineElementInternal> timelineElementList = Set.of(timelineElement1, timelineElement2, timelineElement3,
+        Set<TimelineElementInternal> timelineElementList = Set.of(timelineElement1, timelineElement3,
                 timelineElement4, timelineElement5, timelineElement6, timelineElement7);
 
 
         // WHEN ask for status history
+        Instant notificationCreatedAt = Instant.parse("2021-09-16T15:20:00.00Z");
+        
         List<NotificationStatusHistoryElement> actualStatusHistory = statusUtils.getStatusHistory(
                 timelineElementList, 1,
-                Instant.parse("2021-09-16T15:20:00.00Z")
+                notificationCreatedAt
         );
 
         // THEN status histories have same length
@@ -76,8 +73,8 @@ class StatusUtilsTest {
         //  ... 1st initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.IN_VALIDATION)
-                        .activeFrom((Instant.parse("2021-09-16T15:20:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( ))
+                        .activeFrom(notificationCreatedAt)
+                        .relatedTimelineElements(List.of())
                         .build(),
                 actualStatusHistory.get( 0 ),
                 "1st status wrong"
@@ -86,8 +83,8 @@ class StatusUtilsTest {
         //  ... 2nd initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.ACCEPTED)
-                        .activeFrom((Instant.parse("2021-09-16T15:24:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( "el1" ))
+                        .activeFrom( timelineElement1.getTimestamp() )
+                        .relatedTimelineElements(List.of("el1"))
                         .build(),
                 actualStatusHistory.get( 1 ),
                 "2nd status wrong"
@@ -96,8 +93,8 @@ class StatusUtilsTest {
         //  ... 3rd initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.DELIVERING)
-                        .activeFrom((Instant.parse("2021-09-16T15:25:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( "el2", "el3", "el4" ))
+                        .activeFrom( timelineElement3.getTimestamp() )
+                        .relatedTimelineElements( Arrays.asList(  "el3", "el4" ))
                         .build(),
                 actualStatusHistory.get( 2 ),
                 "3rd status wrong"
@@ -106,8 +103,8 @@ class StatusUtilsTest {
         //  ... 4th initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.DELIVERED)
-                        .activeFrom((Instant.parse("2021-09-16T15:28:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( "el5" ))
+                        .activeFrom( timelineElement5.getTimestamp() )
+                        .relatedTimelineElements(List.of("el5"))
                         .build(),
                 actualStatusHistory.get( 3 ),
                 "4th status wrong"
@@ -116,8 +113,8 @@ class StatusUtilsTest {
         //  ... 5th initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.VIEWED)
-                        .activeFrom((Instant.parse("2021-09-16T17:00:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( "el6" ))
+                        .activeFrom( timelineElement6.getTimestamp() )
+                        .relatedTimelineElements(List.of("el6"))
                         .build(),
                 actualStatusHistory.get( 4 ),
                 "2nd status wrong"
@@ -126,13 +123,12 @@ class StatusUtilsTest {
         //  ... 6th initial status
         Assertions.assertEquals( NotificationStatusHistoryElement.builder()
                         .status(NotificationStatus.PAID)
-                        .activeFrom((Instant.parse("2021-09-16T17:30:00.00Z")))
-                        .relatedTimelineElements( Arrays.asList( "el7" ))
+                        .activeFrom( timelineElement7.getTimestamp() )
+                        .relatedTimelineElements(List.of("el7"))
                         .build(),
                 actualStatusHistory.get( 5 ),
                 "6th status wrong"
         );
-
     }
 
     @Test
@@ -143,14 +139,9 @@ class StatusUtilsTest {
                 .timestamp((Instant.parse("2021-09-16T15:24:00.00Z")))
                 .category(TimelineElementCategory.REQUEST_ACCEPTED)
                 .build();
-        TimelineElementInternal timelineElement2 = TimelineElementInternal.timelineInternalBuilder()
-                .elementId("el2")
-                .timestamp((Instant.parse("2021-09-16T15:25:00.00Z")))
-                .category(TimelineElementCategory.GET_ADDRESS)
-                .build();
         TimelineElementInternal timelineElement3 = TimelineElementInternal.timelineInternalBuilder()
                 .elementId("el3")
-                .timestamp((Instant.parse("2021-09-16T15:26:00.00Z")))
+                .timestamp((Instant.parse("2021-09-16T15:25:00.00Z")))
                 .category(TimelineElementCategory.SEND_DIGITAL_DOMICILE)
                 .build();
         TimelineElementInternal timelineElement4 = TimelineElementInternal.timelineInternalBuilder()
@@ -176,7 +167,7 @@ class StatusUtilsTest {
         TimelineElementInternal timelineElement5_1 = TimelineElementInternal.timelineInternalBuilder()
                 .elementId("el8")
                 .timestamp((Instant.parse("2021-09-16T15:31:00.00Z")))
-                .category(TimelineElementCategory.GET_ADDRESS)
+                .category(TimelineElementCategory.DIGITAL_SUCCESS_WORKFLOW)
                 .build();
         TimelineElementInternal timelineElement6 = TimelineElementInternal.timelineInternalBuilder()
                 .elementId("el9")
@@ -189,51 +180,53 @@ class StatusUtilsTest {
                 .category(TimelineElementCategory.PAYMENT)
                 .build();
 
-        Set<TimelineElementInternal> timelineElementList = Set.of(timelineElement1, timelineElement2,
+        Set<TimelineElementInternal> timelineElementList = Set.of(timelineElement1,
                 timelineElement3, timelineElement4, timelineElement5, timelineElement3_1, timelineElement4_1,
                 timelineElement5_1, timelineElement6, timelineElement7);
 
 
         // creare List<NotificationStatusHistoryElement>
+        Instant notificationCreatedAt = Instant.parse("2021-09-16T15:20:00.00Z");
+        
         NotificationStatusHistoryElement historyElement = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.IN_VALIDATION)
-                .activeFrom((Instant.parse("2021-09-16T15:20:00.00Z")))
-                .relatedTimelineElements( Arrays.asList(  ))
+                .activeFrom(notificationCreatedAt)
+                .relatedTimelineElements(List.of())
                 .build();
 
         NotificationStatusHistoryElement historyElement1 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.ACCEPTED)
                 .activeFrom((Instant.parse("2021-09-16T15:24:00.00Z")))
-                .relatedTimelineElements( Arrays.asList( "el1" ))
+                .relatedTimelineElements(List.of("el1"))
                 .build();
 
         NotificationStatusHistoryElement historyElement2 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.DELIVERING)
                 .activeFrom((Instant.parse("2021-09-16T15:25:00.00Z")))
-                .relatedTimelineElements( Arrays.asList( "el2", "el3", "el4", "el5", "el6", "el7" ))
+                .relatedTimelineElements( Arrays.asList( "el3", "el4", "el5", "el6", "el7" ))
                 .build();
         NotificationStatusHistoryElement historyElement4_1 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.DELIVERED)
                 .activeFrom((Instant.parse("2021-09-16T15:31:00.00Z")))
-                .relatedTimelineElements( Arrays.asList( "el8" ))
+                .relatedTimelineElements(List.of("el8"))
                 .build();
         NotificationStatusHistoryElement historyElement5 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.VIEWED)
                 .activeFrom((Instant.parse("2021-09-16T17:00:00.00Z")))
-                .relatedTimelineElements( Arrays.asList( "el9" ))
+                .relatedTimelineElements(List.of("el9"))
                 .build();
         NotificationStatusHistoryElement historyElement6 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.PAID)
                 .activeFrom((Instant.parse("2021-09-16T17:30:00.00Z")))
-                .relatedTimelineElements( Arrays.asList( "el10" ))
+                .relatedTimelineElements(List.of("el10"))
                 .build();
         List<NotificationStatusHistoryElement> historyElementList = Arrays.asList(historyElement,historyElement1,
                 historyElement2, historyElement4_1, historyElement5, historyElement6);
 
         // chiamare metodo di test
         List<NotificationStatusHistoryElement> resHistoryElementList = statusUtils.getStatusHistory(
-                timelineElementList, 2,
-                Instant.parse("2021-09-16T15:20:00.00Z")
+                timelineElementList, 1,
+                notificationCreatedAt
         );
         // verificare che è risultato atteso
         Assertions.assertEquals(historyElementList, resHistoryElementList);
@@ -261,29 +254,30 @@ class StatusUtilsTest {
         Set<TimelineElementInternal> timelineElementList = Set.of(timelineElement1,
                 timelineElement2, timelineElement3);
 
-        // creare List<NotificationStatusHistoryElement>
+        Instant notificationCreatedAt = Instant.parse("2021-09-16T15:23:00.00Z");
+        
         NotificationStatusHistoryElement historyElement1 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.IN_VALIDATION)
-                .relatedTimelineElements( Arrays.asList( ))
-                .activeFrom((Instant.parse("2021-09-16T15:23:00.00Z")))
+                .relatedTimelineElements(List.of())
+                .activeFrom(notificationCreatedAt)
                 .build();
 
         NotificationStatusHistoryElement historyElement2 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.ACCEPTED)
                 .activeFrom((Instant.parse("2021-09-16T15:24:00.00Z")))
-                .relatedTimelineElements( Arrays.asList("el1"))
+                .relatedTimelineElements(List.of("el1"))
                 .build();
 
         NotificationStatusHistoryElement historyElement3 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.VIEWED)
                 .activeFrom((Instant.parse("2021-09-16T15:25:00.00Z")))
-                .relatedTimelineElements( Arrays.asList("el2"))
+                .relatedTimelineElements(List.of("el2"))
                 .build();
 
         NotificationStatusHistoryElement historyElement4 = NotificationStatusHistoryElement.builder()
                 .status(NotificationStatus.PAID)
                 .activeFrom((Instant.parse("2021-09-16T15:26:00.00Z")))
-                .relatedTimelineElements( Arrays.asList("el3"))
+                .relatedTimelineElements(List.of("el3"))
                 .build();
 
         List<NotificationStatusHistoryElement> historyElementList = Arrays.asList(
@@ -293,7 +287,7 @@ class StatusUtilsTest {
         // chiamare metodo di test
         List<NotificationStatusHistoryElement> resHistoryElementList = statusUtils.getStatusHistory(
                 timelineElementList, 2,
-                Instant.parse("2021-09-16T15:23:00.00Z")
+                notificationCreatedAt
         );
         // verificare che è risultato atteso
         Assertions.assertEquals(historyElementList, resHistoryElementList);
